# flawless-template

./: flake.nix
my-server/: Cargo.toml  build.rs
my-server/src/: main.rs
my-server/workflows/hello/: Cargo.toml
my-server/workflows/hello/src/: lib.rs
